# IMUDataReadings

./: CMakeLists.txt  README.md  main.cpp
